force-app/main/default/objects/Account/fields/SHS_Sales_Zone_name__c.field-meta.xml
<CustomField>
    <fullName>SHS_Sales_Zone_name__c</fullName>
    <label>Sales Zone Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SHS_Sales_zone__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada Central</fullName>
            </value>
            <value>
                <fullName>Canada East</fullName>
            </value>
            <value>
                <fullName>Canada FSR</fullName>
            </value>
            <value>
                <fullName>Canada West</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Headquarters</fullName>
            </value>
            <value>
                <fullName>HS Specific</fullName>
            </value>
            <value>
                <fullName>Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>