force-app/main/default/objects/Account/fields/SHS_Salestax_id__c.field-meta.xml
<CustomField>
    <fullName>SHS_Salestax_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>