force-app/main/default/objects/Account/fields/SHS_Short_name__c.field-meta.xml
<CustomField>
    <fullName>SHS_Short_name__c</fullName>
    <description>CISS Data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>