force-app/main/default/objects/Account/fields/SHS_Source_System_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>SHS_Source_System_Account_Id__c</fullName>
    <description>This field value represents the unique ID for the account that was generated by the Source System from which the account record was established.  In CLMA, the value must always be prefaced by a 3-letter acronym and hyphen which represent the source system, and include any/all leading zeroes (ex. &quot;P58-1000000536&quot;)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source System Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>