force-app/main/default/objects/Account/fields/SHS_Source_System_Method__c.field-meta.xml
<CustomField>
    <fullName>SHS_Source_System_Method__c</fullName>
    <description>Provides details as to whether the account record was created in CLMA and has an active subscription with CMD via direct integration, or via an external integration between the source system and CMD, with the IFA Number and other CMD data flowing to CLMA indirectly via the source system.  Alternatively, account records can be created in CLMA as a One-Time Load with no CMD subscription, and would be subject to  merging or conversion to an account record with an active CMD subscription.</description>
    <label>Source System Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Integration</fullName>
            </value>
            <value>
                <fullName>One Time Load</fullName>
                <label>One-Time Load</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>