force-app/main/default/objects/Account/fields/SHS_Source_system_UUID__c.field-meta.xml
<CustomField>
    <fullName>SHS_Source_system_UUID__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;P40_Account&apos;,SHS_Customer_no__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source System UUID</label>
    <type>Text</type>
</CustomField>