force-app/main/default/objects/Account/fields/SHS_Standard_clma_account_id__c.field-meta.xml
<CustomField>
    <fullName>SHS_Standard_clma_account_id__c</fullName>
    <displayFormat>AC-{0000000}</displayFormat>
    <label>Standard CLMA Account ID</label>
    <type>AutoNumber</type>
</CustomField>