force-app/main/default/objects/Account/fields/SHS_Street1__c.field-meta.xml
<CustomField>
    <fullName>SHS_Street1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street field 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>