force-app/main/default/objects/Account/fields/SHS_Street_2__c.field-meta.xml
<CustomField>
    <fullName>SHS_Street_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>