force-app/main/default/objects/Account/fields/SHS_Street_4__c.field-meta.xml
<CustomField>
    <fullName>SHS_Street_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>