force-app/main/default/objects/Account/fields/SHS_Street__c.field-meta.xml
<CustomField>
    <fullName>SHS_Street__c</fullName>
    <description>CISS and CMD Data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>