force-app/main/default/objects/Account/fields/SHS_Street_i__c.field-meta.xml
<CustomField>
    <fullName>SHS_Street_i__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street field 1 (international)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>