force-app/main/default/objects/Account/fields/SHS_Subscribed_IFA_Nr__c.field-meta.xml
<CustomField>
    <fullName>SHS_Subscribed_IFA_Nr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subscribed IFA Nr</label>
    <length>20</length>
    <type>Text</type>
</CustomField>