force-app/main/default/objects/Account/fields/SHS_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>SHS_Unsubscribe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unsubscribe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>