force-app/main/default/objects/Account/fields/SHS_Unsubscribe_account_from_cmd__c.field-meta.xml
<CustomField>
    <fullName>SHS_Unsubscribe_account_from_cmd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field available for users to request a CLMA account to be unsubscribed from CMD.  Set up as a checkbox, allowing users the possibility to essentially change the Account Status to &quot;Unsubscription Requested&quot;, and triggering a call to CMD to unsubscribe, which would then trigger the value for &quot;CMD Master Data&quot; to &quot;V&quot; and clear the IFA Nr value in CLMA.</description>
    <label>Unsubscribe Account from CMD</label>
    <type>Checkbox</type>
</CustomField>