force-app/main/default/objects/Account/fields/SHS_Zip_code__c.field-meta.xml
<CustomField>
    <fullName>SHS_Zip_code__c</fullName>
    <description>CISS Data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ZIP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>