force-app/main/default/objects/Account/recordTypes/Administrative_Account.recordType-meta.xml
<RecordType>
    <fullName>Administrative_Account</fullName>
    <active>true</active>
    <description>SHS Contract Owners</description>
    <label>Administrative Account</label>
</RecordType>