force-app/main/default/objects/Account/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>CMD Data only - please follow Account process</description>
    <label>External</label>
</RecordType>