force-app/main/default/objects/Account/recordTypes/One_Time_Load.recordType-meta.xml
<RecordType>
    <fullName>One_Time_Load</fullName>
    <active>true</active>
    <label>One-Time Load</label>
</RecordType>