force-app/main/default/objects/Account/recordTypes/P40_Account.recordType-meta.xml
<RecordType>
    <fullName>P40_Account</fullName>
    <active>true</active>
    <label>P40 Account</label>
</RecordType>