force-app/main/default/objects/Account/recordTypes/Siemens.recordType-meta.xml
<RecordType>
    <fullName>Siemens</fullName>
    <active>true</active>
    <description>CISS Data only - may not be created manually</description>
    <label>Siemens</label>
</RecordType>