force-app/main/default/objects/Account/recordTypes/Siemens_Healthineers.recordType-meta.xml
<RecordType>
    <fullName>Siemens_Healthineers</fullName>
    <active>true</active>
    <description>CISS Data only - may not be created manually</description>
    <label>Siemens Healthineers</label>
</RecordType>