force-app/main/default/objects/Account/validationRules/Account_Name_Validation_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Validation_5</fullName>
    <active>true</active>
    <errorConditionFormula>AND(($CustomMetadata.Validation_Rule_Configuration__mdt.Account_Validation_Enable.SHS_Account__c = True),
OR(ISCHANGED(Name),ISCHANGED(SHS_Street__c),ISCHANGED( SHS_City__c ),ISCHANGED( SHS_Postal_code__c ), ISCHANGED(SHS_Country__c ),
ISCHANGED( SHS_Region_state_province__c ), ISCHANGED( SHS_Government_classification__c ), ISCHANGED( SHS_Account_type__c ), ISCHANGED( SHS_Business_partner_type__c ), ISCHANGED(SHS_Governmental_customer_indicator__c), ISCHANGED(SHS_Account_status__c),
ISCHANGED( SHS_Org_region__c ),ISCHANGED(SHS_Org_zone__c ),ISCHANGED(OwnerId ), ISCHANGED(SHS_Legal_Hold__c )), 
NOT($Profile.Name = &apos;System Administrator&apos;), 
IF(($Profile.Name = &apos;SHS Business Admin&apos;), NOT(OR(ISCHANGED(SHS_Account_status__c), ISCHANGED(ParentId), ISCHANGED(SHS_Legal_Hold__c))), True),
(NOT(ISPICKVAL(PRIORVALUE(SHS_Account_status__c), &apos;Rejected&apos;) &amp;&amp; ISPICKVAL(SHS_Account_status__c, &apos;Draft&apos;))),
((ISPICKVAL(SHS_Account_type__c, &apos;Legacy Migrated Account&apos;) &amp;&amp; ISPICKVAL(SHS_Account_status__c, &apos;Draft&apos;))))</errorConditionFormula>
    <errorMessage>Account Fields cannot be Changed - Legacy Migrated Account &amp; Draft</errorMessage>
</ValidationRule>