force-app/main/default/objects/Account/validationRules/col_OnlyNumericValuesToBeUsed.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyNumericValuesToBeUsed</fullName>
    <active>true</active>
    <description>Ensure that only numeric values are entered in certain text fields (currently used for TIN and OSC Account ID)</description>
    <errorConditionFormula>OR(
    AND(
        NOT(ISBLANK(TIN__c)),
        NOT(ISNUMBER(TIN__c))
    ),
    AND(
        NOT(ISBLANK(OSCAccountID__c)),
        NOT(ISNUMBER(OSCAccountID__c))
    )
)</errorConditionFormula>
    <errorMessage>Please make sure to enter only numbers in the following fields: TIN, OSC Account ID.</errorMessage>
</ValidationRule>