force-app/main/default/objects/Account/listViews/External_Accounts_Key_Data.listView-meta.xml
<ListView>
    <fullName>External_Accounts_Key_Data</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>SHS_Ifa_nr__c</columns>
    <columns>SHS_Account_type__c</columns>
    <columns>SHS_Account_status__c</columns>
    <columns>SHS_Country__c</columns>
    <columns>SHS_City__c</columns>
    <columns>SHS_Street__c</columns>
    <columns>SHS_Standard_clma_account_id__c</columns>
    <columns>SHS_Region_state_province__c</columns>
    <columns>SHS_Postal_code__c</columns>
    <columns>SHS_Cmd_info__c</columns>
    <columns>SHS_Governmental_customer_indicator__c</columns>
    <columns>SHS_Government_classification__c</columns>
    <columns>SHS_Designated_CLMA_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.External,Account.P40_Account</value>
    </filters>
    <label>External Accounts Key Data</label>
</ListView>