force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>SHS_Standard_clma_account_id__c</columns>
    <columns>SHS_Ciss_cmd_account_id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>SHS_Country__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>SHS_Account_status__c</columns>
    <columns>SHS_Account_type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>