force-app/main/default/objects/Account/listViews/SHS_Accounts_Via_CISS_Integration.listView-meta.xml
<ListView>
    <fullName>SHS_Accounts_Via_CISS_Integration</fullName>
    <columns>SHS_Ciss_cmd_account_id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>SHS_Are_ifa__c</columns>
    <columns>SHS_Country__c</columns>
    <columns>SHS_Address__c</columns>
    <columns>SHS_Account_type__c</columns>
    <columns>SHS_Account_status__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>iuser</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Siemens_Healthineers</value>
    </filters>
    <label>SHS Accounts Via CISS Integration</label>
</ListView>